# lo-vegadri

./: .gitignore  .gitmodules  .history  .travis-setup.sh  .travis.yml  README.md  lo-tegadri.cabal  lo-vegadri.cabal  stack.yaml
LICENSE/: APACHE  BSD3  MIT
app/jboi/: .history  Main.hs  Repl.hs
bench/: MainBenchmarkSuite.hs
data/: Lojban_logo.txt  jbo-eng.dict.dz  jbo-eng.idx  jbo-eng.ifo
docs/: TODO.org  lojban-spec.org
src/Jbo/: Mekso.hs
src/Language/Lojban/Jboi/: .history  CSTtoAST.hs  Constant.hs  DB.hs  test.sql  todo.org
src/lojbanParser-0.1.9.2/: lojbanParser.cabal
src/lojbanParser-0.1.9.2/src/: LexerPappy.pappy  Preprocess.hs  TestPappy.hs
src/lojbanParser-0.1.9.2/src/Language/Lojban/: Parser.hs
test/: CONTRIBUTING.md  README.md  Spec.hs  lenjo.cabal  stack.yaml
test/app/jboi/: Main.hs  Repl.hs  alt.txt
test/integration/: IntegrationSpec.hs
test/src/: Lib.hs
test/src/Jbo/: CSTtoAST.hs  Constant.hs  DB.hs
test/src/Language/Lojban/Jboi/: Mekso.hs
test/src/lojbanParser-0.1.9.2/src/: LexerPappy.hs  TestPappy.pappy
