name:                lo-vegadri
version:             0.0.1.0
synopsis:            Semantic Lojban "standardization" attempt and implementation
description:         Please see README.md
homepage:            https://github.com/MarkMcCaskey/lo-vegadri
license:             BSD3
license-file:        LICENSE/BSD3
author:              Mark McCaskey
maintainer:          mmccask2@gmu.edu
copyright:           2016 Mark McCaskey
category:            Language
build-type:          Simple
cabal-version:       >=1.10
 
library
  hs-source-dirs:      src, src/Language/Lojban/Jboi
  exposed-modules:     Lib, Language.Lojban.Jboi.CSTtoAST, Language.Lojban.Jboi.Mekso, Language.Lojban.Jboi.Constant, Language.Lojban.Jboi.DB
  build-depends:       array
                     , base >= 4.7 && < 5
                     , lojbanParser
                     , bytestring
                     , containers >= 0.5.7.1
                     , logict
                     , optparse-applicative
                     , parsec
                     , text
                     , lens
                     , random
                     , unbound
                     , mtl
                     , numeric-prelude
                     , include-file
                     , datalog
  build-tools:
  default-language:    Haskell2010
  ghc-options:         -Wall 

executable jboi
  hs-source-dirs:      app/jboi
  main-is:             Main.hs
  other-modules:       Repl
  ghc-options:         -Wall -O2 -optc-O3 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple
                     , text
                     , mtl
                     , lo-vegadri
                     , repline
                     , haskeline
                     , optparse-applicative
                     , lojbanParser
                     , datalog
                     , include-file
                     , bytestring
                     , dictionaries
                     , directory
                     , bytestring-trie
                     , containers

  default-language:    Haskell2010

flag integration-tests
  manual:              True
  default:             False
  description:         Run the integration test suite
  
test-suite stack-integration-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/integration
  main-is:             IntegrationSpec.hs
  build-depends:       base
                     , lo-vegadri
                     , hspec
                     , QuickCheck
                     , smallcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -O2 -optc-O3
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple
                     , lojbanParser
                     , lo-vegadri 
                     , hspec
                     , QuickCheck 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -O2 -optc-O3
  default-language:    Haskell2010

benchmark eval-mekso
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          MainBenchmarkSuite.hs
  build-depends:    base
                  , criterion
                  , lo-vegadri 
                  , lojbanParser
  ghc-options:    -Wall -O2 -optc-O3 -rtsopts -with-rtsopts=-A10m
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/MarkMcCaskey/lo-vegadri
